--- a/final-dashboard/demo.web3canvas.com/themeforest/coindash/admin/dark/index.html
+++ b/final-dashboard/demo.web3canvas.com/themeforest/coindash/admin/dark/index.html
@@ -386,16 +386,16 @@
 <i class="cc BTC" title="BTC"></i>
 </div>
 <div class="col-5">
-<h3>Bitcoin BTC</h3>
-<h6 class="text-muted">0.00000434 <span class="color-gray">BTC</span> <span class="text-info">$0.04</span></h6>
+<h3>Muhana </h3>
+<h6 class="text-muted">Reported Cases stats <span class="color-gray"></span> <span class="text-info">Monthly</span></h6>
 </div>
 <div class="col-5 text-right">
-<h3>$8,569</h3>
+<h3>70*</h3>
 <h6 class="text-success">31% <i class="ti-arrow-up f-s-16 text-success m-l-5"></i></h6>
 </div>
 </div>
 <div class="m-t-15">
-<span class="peity-btc" data-peity="{ &quot;fill&quot;: &quot;rgba(247, 147, 26, 0.5)&quot;, &quot;stroke&quot;: &quot;#f7931a&quot;}">6,2,8,4,3,8,1,3,6,5,9,2,8,1,4,8,9,8,2,1</span>
+<span class="peity-btc" data-peity="{ &quot;fill&quot;: &quot;rgba(247, 147, 26, 0.5)&quot;, &quot;stroke&quot;: &quot;#f7931a&quot;}">6,2,8,4,3,8,1,3,6,5,9,2,8,1,4,8,9,8,10,11</span>
 </div>
 </div>
 </div>
@@ -410,16 +410,16 @@
 <i class="cc LTC" title="LTC"></i>
 </div>
 <div class="col-5">
-<h3>Litecoin LTC</h3>
-<h6 class="text-muted">0.00000434 <span class="color-gray">BTC</span> <span class="text-info">$0.04</span></h6>
+<h3>Amer</h3>
+<h6 class="text-muted">Reported Cases stats <span class="color-gray"></span> <span class="text-info">Monthly</span></h6>
 </div>
 <div class="col-5 text-right">
-<h3>$8,569</h3>
-<h6 class="text-danger">31% <i class="ti-arrow-down f-s-16 text-danger m-l-5"></i></h6>
+<h3>20*</h3>
+<h6 class="text-danger">18% <i class="ti-arrow-down f-s-16 text-danger m-l-5"></i></h6>
 </div>
 </div>
 <div class="m-t-15">
-<span class="peity-ltc" data-peity="{ &quot;fill&quot;: &quot;rgba(131, 131, 131, 0.59)&quot;, &quot;stroke&quot;: &quot;#838383&quot;}">6,2,8,4,3,8,1,3,6,5,9,2,8,1,4,8,9,8,2,1</span>
+<span class="peity-ltc" data-peity="{ &quot;fill&quot;: &quot;rgba(131, 131, 131, 0.59)&quot;, &quot;stroke&quot;: &quot;#838383&quot;}">1,2,8,4,3,8,1,3,6,5,9,2,8,1,4,8,4,8,2,1</span>
 </div>
 </div>
 </div>
@@ -434,16 +434,16 @@
 <i class="cc NEO" title="NEO"></i>
 </div>
 <div class="col-5">
-<h3>Neo NEO</h3>
-<h6 class="text-muted">0.00000434 <span class="color-gray">BTC</span> <span class="text-info">$0.04</span></h6>
+<h3>Mansarovar</h3>
+<h6 class="text-muted">Reported Cases stats <span class="color-gray"></span> <span class="text-info">Monthly</span></h6>
 </div>
 <div class="col-5 text-right">
 <h3>$8,569</h3>
-<h6 class="text-warning">31% <i class="ti-arrow-up f-s-16 text-warning m-l-5"></i></h6>
+<h6 class="text-warning">40% <i class="ti-arrow-up f-s-16 text-warning m-l-5"></i></h6>
 </div>
 </div>
 <div class="m-t-15">
-<span class="peity-neo" data-peity="{ &quot;fill&quot;: &quot;rgba(88, 191, 0, 0.59)&quot;, &quot;stroke&quot;: &quot;#58bf00&quot;}">6,2,8,4,3,8,1,3,6,5,9,2,8,1,4,8,9,8,2,1</span>
+<span class="peity-neo" data-peity="{ &quot;fill&quot;: &quot;rgba(88, 191, 0, 0.59)&quot;, &quot;stroke&quot;: &quot;#58bf00&quot;}">6,2,8,4,3,8,1,3,6,5,9,2,8,1,4,8,9,8,10,15</span>
 </div>
 </div>
 </div>
@@ -458,16 +458,16 @@
 <i class="cc DASH"></i>
 </div>
 <div class="col-5">
-<h3>Dash DASH</h3>
-<h6 class="text-muted">0.00000434 <span class="color-gray">BTC</span> <span class="text-info">$0.04</span></h6>
+<h3>Tunga</h3>
+<h6 class="text-muted">Reported Cases stats <span class="color-gray"></span> <span class="text-info">Monthly</span></h6>
 </div>
 <div class="col-5 text-right">
-<h3>$8,569</h3>
+<h3>17*</h3>
 <h6 class="text-primary">31% <i class="ti-arrow-up f-s-16 text-primary m-l-5"></i></h6>
 </div>
 </div>
 <div class="m-t-15">
-<span class="peity-dash" data-peity="{ &quot;fill&quot;: &quot;rgba(28, 117, 188, 0.45)&quot;, &quot;stroke&quot;: &quot;#1c75bc&quot;}">6,2,8,4,3,8,1,3,6,5,9,2,8,1,4,8,9,8,2,1</span>
+<span class="peity-dash" data-peity="{ &quot;fill&quot;: &quot;rgba(28, 117, 188, 0.45)&quot;, &quot;stroke&quot;: &quot;#1c75bc&quot;}">3,2,2,4,3,4,1,3,6,5,9,2,0,1,4,4,12,20,12,11</span>
 </div>
 </div>
 </div>
@@ -482,16 +482,16 @@
 <i class="cc ETH" title="ETH"></i>
 </div>
 <div class="col-5">
-<h3>Ethereum ETH</h3>
-<h6 class="text-muted">0.00000434 <span class="color-gray">BTC</span> <span class="text-info">$0.04</span></h6>
+<h3>Jhotwara</h3>
+<h6 class="text-muted">Reported Cases stats  <span class="color-gray"></span> <span class="text-info">Monthly</span></h6>
 </div>
 <div class="col-5 text-right">
-<h3>$8,569</h3>
-<h6 class="text-info">31% <i class="ti-arrow-up f-s-16 text-info m-l-5"></i></h6>
+<h3>50*</h3>
+<h6 class="text-info">20% <i class="ti-arrow-up f-s-16 text-info m-l-5"></i></h6>
 </div>
 </div>
 <div class="m-t-15">
-<span class="peity-eth" data-peity="{ &quot;fill&quot;: &quot;rgba(70, 70, 70, 0.5)&quot;, &quot;stroke&quot;: &quot;#282828&quot;}">6,2,8,4,3,8,1,3,6,5,9,2,8,1,4,8,9,8,2,1</span>
+<span class="peity-eth" data-peity="{ &quot;fill&quot;: &quot;rgba(70, 70, 70, 0.5)&quot;, &quot;stroke&quot;: &quot;#282828&quot;}">6,2,8,4,3,8,1,3,6,5,9,2,8,1,4,8,9,8,21,11</span>
 </div>
 </div>
 </div>
@@ -506,16 +506,16 @@
 <i class="cc XRP" title="XRP"></i>
 </div>
 <div class="col-5">
-<h3>Ripple XRP</h3>
-<h6 class="text-muted">0.00000434 <span class="color-gray">BTC</span> <span class="text-info">$0.04</span></h6>
+<h3>Paryatak</h3>
+<h6 class="text-muted">Reported Cases stats <span class="color-gray"></span> <span class="text-info">Monthly</span></h6>
 </div>
 <div class="col-5 text-right">
-<h3>$8,569</h3>
-<h6 class="text-danger">31% <i class="ti-arrow-up f-s-16 text-danger m-l-5"></i></h6>
+<h3>10*</h3>
+<h6 class="text-danger">12% <i class="ti-arrow-up f-s-16 text-danger m-l-5"></i></h6>
 </div>
 </div>
 <div class="m-t-15">
-<span class="peity-xrp" data-peity="{ &quot;fill&quot;: &quot;rgba(52, 106, 169, 0.51)&quot;, &quot;stroke&quot;: &quot;#346aa9&quot;}">6,2,8,4,3,8,1,3,6,5,9,2,8,1,4,8,9,8,2,1</span>
+<span class="peity-xrp" data-peity="{ &quot;fill&quot;: &quot;rgba(52, 106, 169, 0.51)&quot;, &quot;stroke&quot;: &quot;#346aa9&quot;}">6,2,8,4,3,8,1,3,6,5,9,12,8,1,4,8,9,18,2,1</span>
 </div>
 </div>
 </div>
