--- a/final-dashboard/demo.web3canvas.com/themeforest/coindash/admin/dark/index4.html
+++ b/final-dashboard/demo.web3canvas.com/themeforest/coindash/admin/dark/index4.html
@@ -371,8 +371,8 @@
 <span><i class="ti-bag f-s-40"></i></span>
 </div>
 <div class="media-body media-text-right">
-<h2 class="color-white">278</h2>
-<p class="m-b-0">New Posts</p>
+<h2 class="color-white">500*</h2>
+<p class="m-b-0">Cases Reported</p>
 </div>
 </div>
 </div>
@@ -384,8 +384,8 @@
 <span><i class="ti-comment f-s-40"></i></span>
 </div>
 <div class="media-body media-text-right">
-<h2 class="color-white">278</h2>
-<p class="m-b-0">New Comment</p>
+<h2 class="color-white">100</h2>
+<p class="m-b-0">Media Reported Cases</p>
 </div>
 </div>
 </div>
@@ -397,8 +397,8 @@
 <span><i class="ti-vector f-s-40"></i></span>
 </div>
 <div class="media-body media-text-right">
-<h2 class="color-white">$27647</h2>
-<p class="m-b-0">Bounce Rate</p>
+<h2 class="color-white">300</h2>
+<p class="m-b-0">AI service Reported Cases</p>
 </div>
 </div>
 </div>
@@ -410,8 +410,8 @@
 <span><i class="ti-location-pin f-s-40"></i></span>
 </div>
 <div class="media-body media-text-right">
-<h2 class="color-white">278</h2>
-<p class="m-b-0">Total Visitor</p>
+<h2 class="color-white">100</h2>
+<p class="m-b-0">Live Cases Reported</p>
 </div>
 </div>
 </div>
